test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/no_return_value.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  int
  identifier(foo)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  identifier(foo)
  (
  )
  ;
  return
  const int(0)
  ;
  }
